[package]
name = "notifyme"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
rmcp = { version = "0.6.0", features = ["server", "transport-sse-server"] }
rand = "0.8"
schemars = "0.8"
# For Windows notifications
[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"
